Typo on the 2º Erlang Friday post

--- a/_posts/2020-05-15-2-erlang-day.md
+++ b/_posts/2020-05-15-2-erlang-day.md
@@ -24,7 +24,7 @@ Se você não conhece a iniciativa e quer participar, basta entrar pro [grupo do
 
 ## Agradecimentos
 
-Eu gostaria de agradecer aos participantes pela presença nesta primeira edição:
+Eu gostaria de agradecer aos participantes pela presença nesta edição:
 
 - [Allef Gomes](https://twitter.com/allefgalmeida)
 - [Herminio Torres](https://twitter.com/herminiotorres)
