Post authors now including Twitter URLs

--- a/_posts/2020-05-09-1-erlang-day.md
+++ b/_posts/2020-05-09-1-erlang-day.md
@@ -4,8 +4,7 @@ title: 1º Erlang Friday
 published: true
 date: 2020-05-09 17:10:00 -0300
 permalink: /blog/1-erlang-friday
-author: Joel Jucá
-author_url: https://twitter.com/joelwallis1
+author: <a href="https://twitter.com/joelwallis1">Joel Jucá</a>
 ---
 
 Tivemos nossa [1º Erlang Friday](https://github.com/elug-ce/forum/issues/7) ontem, dia 8 de maio de 2020! Nesta edição falamos sobre os conceitos mais básicos da linguagem de programação Erlang, como suas características funcionais, seu controverso _terminador de linha_, variáveis e funções - além de pattern matching. O encontro durou 1h, com participantes tanto do Ceará quanto de outros estados.
