Revert "Fix bad quotes in post authors"
This reverts commit 25025fa3eaa4ea19802d885293908c3186abb595.

--- a/_posts/2020-05-22-3-erlang-day.md
+++ b/_posts/2020-05-22-3-erlang-day.md
@@ -4,7 +4,7 @@ title: 3º Erlang Friday
 published: true
 date: 2020-05-23 21:00:00 -0300
 permalink: /blog/3-erlang-friday
-author: <a href='https://twitter.com/joelwallis1'>Joel Jucá</a>
+author: <a href="https://twitter.com/joelwallis1">Joel Jucá</a>
 ---
 
 A terceira edição da [Erlang Fridays](https://github.com/elug-ce/forum/issues/7) rolou ontem, dia 22 de maio de 2020. Nesta edição o consenso quanto ao curso foi unânime: **estamos todos atrasados!** 😂 Não é novidade pra ninguém que ter disciplina para acompanhar um curso online assim é extremamente difícil - e não foi diferente conosco. Mas ainda estamos seguindo com o curso!
