Revert "Post authors now including Twitter URLs"
This reverts commit 5bf3f5e1eb24756258dbdd6021b6d006050276d3.

--- a/_posts/2020-05-15-2-erlang-day.md
+++ b/_posts/2020-05-15-2-erlang-day.md
@@ -4,7 +4,8 @@ title: 2º Erlang Friday
 published: true
 date: 2020-05-15 20:00:00 -0300
 permalink: /blog/2-erlang-friday
-author: <a href="https://twitter.com/joelwallis1">Joel Jucá</a>
+author: Joel Jucá
+author_url: https://twitter.com/joelwallis1
 ---
 
 A segunda edição da [Erlang Fridays](https://github.com/elug-ce/forum/issues/7) rolou hoje, dia 15 de maio de 2020. Nesta edição falamos do conteúdo da 2º semana do MOOC de Erlang, que aborda funções recursivas e listas - além de discutirmos um pouco sobre o sistema de módulos do Erlang.
