Update Joel usernames and URLs

--- a/_posts/2020-05-22-3-erlang-day.md
+++ b/_posts/2020-05-22-3-erlang-day.md
@@ -5,7 +5,7 @@ published: true
 date: 2020-05-23 21:00:00 -0300
 permalink: /blog/3-erlang-friday
 author: Joel Jucá
-author_url: https://twitter.com/joelwallis1
+author_url: https://twitter.com/holyshtjoe
 ---
 
 A terceira edição da [Erlang Fridays](https://github.com/elug-ce/forum/issues/7) rolou ontem, dia 22 de maio de 2020. Nesta edição o consenso quanto ao curso foi unânime: **estamos todos atrasados!** 😂 Não é novidade pra ninguém que ter disciplina para acompanhar um curso online assim é extremamente difícil - e não foi diferente conosco. Mas ainda estamos seguindo com o curso!
