--- a/_posts/2020-05-29-4-erlang-day.md
+++ b/_posts/2020-05-29-4-erlang-day.md
@@ -5,7 +5,7 @@ published: true
 date: 2020-05-29 18:30:00 -0300
 permalink: /blog/4-erlang-friday
 author: Joel Jucá
-author_url: https://twitter.com/joelwallis1
+author_url: https://twitter.com/holyshtjoe
 ---
 
 A quarta edição da [Erlang Fridays](https://github.com/elug-ce/forum/issues/7) rolou ontem, dia 29 de maio de 2020. Nesta edição conversamos sobre o [Exercism](https://exercism.io), um projeto que permite praticar conhecimentos de programação em dezenas de linguagens diferentes. Resolvemos o problema Two Fer - um dos problemas mais básicos da plataforma, com o objetivo de mostrar como o Exercism pode ser usado pelo site e pela CLI.
