--- a/_posts/2020-05-15-2-erlang-day.md
+++ b/_posts/2020-05-15-2-erlang-day.md
@@ -5,7 +5,7 @@ published: true
 date: 2020-05-15 20:00:00 -0300
 permalink: /blog/2-erlang-friday
 author: Joel Jucá
-author_url: https://twitter.com/joelwallis1
+author_url: https://twitter.com/holyshtjoe
 ---
 
 A segunda edição da [Erlang Fridays](https://github.com/elug-ce/forum/issues/7) rolou hoje, dia 15 de maio de 2020. Nesta edição falamos do conteúdo da 2º semana do MOOC de Erlang, que aborda funções recursivas e listas - além de discutirmos um pouco sobre o sistema de módulos do Erlang.
